exports[`HasteMap throws on duplicate module ids if "throwOnModuleCollision" is set to true 1`] = `
[Error: jest-haste-map: @providesModule naming collision:
  Duplicate module name: Strawberry
  Paths: /fruits/raspberry.js collides with /fruits/strawberry.js

This error is caused by a @providesModule declaration with the same name across two different files.]
`;

exports[`HasteMap tries to crawl using node as a fallback 1`] = `
"jest-haste-map: Watchman crawl failed. Retrying once with node crawler.
  Usually this happens when watchman isn't running. Create an empty \`.watchmanconfig\` file in your project's root folder or initialize a git or hg repository in your project.
  Error: watchman error"
`;

exports[`HasteMap warns on duplicate mock files 1`] = `
"jest-haste-map: duplicate manual mock found:
  Module name: blueberry
  Dupicate Mock path: /fruits/__mocks__/subdir2/blueberry.js
This warning is caused by two manual mock files with the same file name.
Jest will use the mock file found in: 
/fruits/__mocks__/subdir2/blueberry.js
 Please delete one of the following two files: 
 /fruits/__mocks__/subdir1/blueberry.js
/fruits/__mocks__/subdir2/blueberry.js

"
`;

exports[`HasteMap warns on duplicate module ids 1`] = `
"jest-haste-map: @providesModule naming collision:
  Duplicate module name: Strawberry
  Paths: /fruits/raspberry.js collides with /fruits/strawberry.js

This warning is caused by a @providesModule declaration with the same name across two different files."
`;
